# skills

./: .gitignore  \
assembly/: README.md  hello.s
docker-shell/: Dockerfile  README.md  entrypoint.sh
go-study/: docker-compose.yml  encodeJsonPool.go  go.mod  goroutine-channel.go  goroutine-pattern.go  goroutine-select.go  main.go  pool.go  rate_limit.go  syncCond.go  sync_pool_test.go
hazelcast/: client.py  docker-compose.yml  pyproject.toml
huckerRank/: a_table_of_two_stacks.go  array_left_lotation.go  balanced_bracket.go  coding_test.go  detect_cycle.go  find_the_running_median.go  go.mod  inorder_traversal.go  main.go  practice_strings.go  ransom_note.go  rco_test.go  syncCond.go  sync_pool_test.go  text_anagram.go  trie.go
jitCompiler/: build.sbt
kubernetes-app/: none-selector.yaml  password  sample-2pod-fail.yaml  sample-2pod.yaml  sample-clusterip-multi.yaml  sample-clusterip.yaml  sample-configmap-single-volume.yaml  sample-configmap.yaml  sample-cronjob.yaml  sample-ds-ondelete.yaml  sample-ds.yaml  sample-emptydir.yaml  sample-entrypoint.yaml  sample-env.yaml  sample-externaldns.yaml  sample-externalip.yaml  sample-externalname.yaml  sample-hostaliases.yaml  sample-hostpath.yaml  sample-ingress-apps.yaml  sample-ingress.yaml  sample-job.yaml  sample-label.yaml  sample-lb.yaml  sample-multi-resource-manifest.yaml  sample-nodeport-local.yaml  sample-nodeport.yaml  sample-pod.yaml  sample-projected.yaml  sample-pv.yaml  sample-pvc-pod.yaml  sample-pvc.yaml  sample-rs.yaml  sample-statefulset-rollingupdate.yaml  sample-statefulset-with-pvc.yaml  (+2 more)
(+80 files in other folders)
